create use cases interactor object for domain model blank order

--- a/1CService.Application/1CService.Application.csproj
+++ b/1CService.Application/1CService.Application.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\1CService.Domain\1CService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
