--- a/1CService.Application/1CService.Application.csproj
+++ b/1CService.Application/1CService.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\1CService.Domain\1CService.Domain.csproj" />
+    <ProjectReference Include="..\1CService.Utilities\1CService.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
