--- a/1CService.Application/1CService.Application.csproj
+++ b/1CService.Application/1CService.Application.csproj
@@ -20,7 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Feature\Authorization\" />
+    <Folder Include="Feature\Authorization\Command\" />
+    <Folder Include="Feature\Authorization\Queries\" />
   </ItemGroup>
 
 </Project>
