--- a/1CService.Utilities/1CService.Utilities.csproj
+++ b/1CService.Utilities/1CService.Utilities.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.31.0" />
+  </ItemGroup>
+
 </Project>
