--- a/1CService.WebApi/1CService.WebApi.csproj
+++ b/1CService.WebApi/1CService.WebApi.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\1CService.Application\1CService.Application.csproj" />
     <ProjectReference Include="..\1CService.Controllers\1CService.Controllers.csproj" />
     <ProjectReference Include="..\1CService.Domain\1CService.Domain.csproj" />
+    <ProjectReference Include="..\1CService.Infrastructure\1CService.Infrastructure.csproj" />
     <ProjectReference Include="..\1CService.Persistence\1CService.Persistence.csproj" />
   </ItemGroup>
 
