--- a/1CService.Persistence/1CService.Persistence.csproj
+++ b/1CService.Persistence/1CService.Persistence.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\1CService.Infrastructure\1CService.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
 </Project>
