--- a/1CService.Persistence/1CService.Persistence.csproj
+++ b/1CService.Persistence/1CService.Persistence.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Enums\**" />
+    <EmbeddedResource Remove="Enums\**" />
+    <None Remove="Enums\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -35,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
