--- a/1CService.Application/1CService.Application.csproj
+++ b/1CService.Application/1CService.Application.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DTO\Response\**" />
+    <EmbeddedResource Remove="DTO\Response\**" />
+    <None Remove="DTO\Response\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
@@ -17,11 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\1CService.Domain\1CService.Domain.csproj" />
     <ProjectReference Include="..\1CService.Utilities\1CService.Utilities.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DTO\Response\" />
-    <Folder Include="Models\Profile\Response\" />
   </ItemGroup>
 
 </Project>
