--- a/1CService.Controllers/1CService.Controllers.csproj
+++ b/1CService.Controllers/1CService.Controllers.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\1CService.Persistence\1CService.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Profile\Queries\" />
+  </ItemGroup>
+
 </Project>
