Added a request to upgrade access rights to Senior Office mail

--- a/1CService.Controllers/1CService.Controllers.csproj
+++ b/1CService.Controllers/1CService.Controllers.csproj
@@ -9,15 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\1CService.Persistence\1CService.Persistence.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Profile\Queries\" />
   </ItemGroup>
 
 </Project>
